# kwasm-demos

./: README.md
.github/workflows/: bookinfo.yaml  oci.yaml
bookinfo/: Dockerfile  README.md  spin.toml
bookinfo/chart/: README.md  values.istio.yaml  values.mixed.yaml  values.spin.ns.yaml  values.spin.yaml  values.yaml
bookinfo/chart/templates/: bookinfo.yaml  deployment.yaml  service.yaml  serviceaccount.yaml
bookinfo/details/: Cargo.toml  Dockerfile  README.md  spin.toml
bookinfo/details/details/: go.mod  go.sum  main.go  main.wasm  spin.toml
bookinfo/details/src/: lib.rs
bookinfo/product-page/: Dockerfile  README.md  go.mod  go.sum  main.go  spin.toml
bookinfo/product-page/pkg/client/: client.go
bookinfo/product-page/pkg/config/: config.go
bookinfo/product-page/pkg/handler/: handler.go
bookinfo/product-page/pkg/products/: gen  products.go  (+1 more)
bookinfo/ratings/: Dockerfile  README.md  go.mod  main.go  spin.toml
bookinfo/reviews/: Cargo.toml  Dockerfile  spin.toml
bookinfo/reviews/src/: health.rs  lib.rs
bookinfo/reviews/src/reviews/: mod.rs  ratings.rs
podtato-head/: README.md
podtato-head/delivery/chart/: README.md  values.yaml
podtato-head/podtato-head-microservices/crates/podtato-parts/: Cargo.toml  Dockerfile
podtato-head/podtato-head-microservices/crates/podtato-parts/src/: main.rs
spin-routers/: README.md  spin.toml
spin-routers/api/chirouter/: go.mod  main.go
spin-routers/api/httprouter/: go.mod  go.sum  main.go
suard/: README.md  go.mod  main.go  spin.toml
suard/pkg/apiutils/: utils.go
suard/pkg/env/: api.go
(+19 files in other folders)
